fix: remove warnings of classes